; ModuleID = '/home/carl/AnghaBench/netdata/web/api/queries/ses/extr_ses.c_grouping_init_ses.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/queries/ses/extr_ses.c_grouping_init_ses.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONFIG_SECTION_WEB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"ses max window\00", align 1
@max_window_size = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grouping_init_ses() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @CONFIG_SECTION_WEB, align 4
  %3 = load i64, i64* @max_window_size, align 8
  %4 = call i64 @config_get_number(i32 %2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = icmp sle i64 %5, 1
  br i1 %6, label %7, label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @CONFIG_SECTION_WEB, align 4
  %9 = load i64, i64* @max_window_size, align 8
  %10 = call i32 @config_set_number(i32 %8, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i64 %9)
  br label %13

11:                                               ; preds = %0
  %12 = load i64, i64* %1, align 8
  store i64 %12, i64* @max_window_size, align 8
  br label %13

13:                                               ; preds = %11, %7
  ret void
}

declare dso_local i64 @config_get_number(i32, i8*, i64) #1

declare dso_local i32 @config_set_number(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
